==> remidebord/STM32F2/template/lib/API/src/I2C.cpp <==
#include "I2C.h"

char I2C :: read(char address, char* command, char size)
{
	int timeout = size * I2C_TIMEOUT;
	char i;
	
	/* Periheral busy ? */
	if(I2C_GetFlagStatus(m_I2C, I2C_FLAG_BUSY) || m_var->busy)
	{
		return ERROR;
	}
	
	/* Initialize values */
	m_var->readWrite = I2C_READ;
	m_var->address = address;
	m_var->length = size;
	m_var->index = 0;
	m_var->busy = 1;

	/* Enable Error and Buffer Interrupts */
	I2C_ITConfig(m_I2C, (I2C_IT_EVT | I2C_IT_BUF), ENABLE);

	/* Generate the Start condition */
	I2C_GenerateSTART(m_I2C, ENABLE);
	
	while(m_var->index != size)
	{
		if((timeout--) == 0)
		{
			// Release the bus
			this->release();
			
			m_var->busy = 0;
			return ERROR;
		}
	}
	
	m_var->busy = 0;
	
	/* Copy data */
	for(i = 0; i < size; i++, command++)
	{
		*command = m_var->buffer[i];
	}
	
	return SUCCESS;
}

	void I2C1_EV_IRQHandler(void)
	{
		switch (I2C_GetLastEvent(I2C1))
		{
			/* EV5 */
			case I2C_EVENT_MASTER_MODE_SELECT:
				
				/* Enable acknowledgement */ 
				I2C_AcknowledgeConfig(I2C1, ENABLE);
				
				/* Send slave address for read or write */
				if(I2C1_var.readWrite == I2C_WRITE)
				{
					I2C_Send7bitAddress(I2C1, (uint8_t)I2C1_var.address, I2C_Direction_Transmitter);
				}
				else
				{
					I2C_Send7bitAddress(I2C1, (uint8_t)I2C1_var.address, I2C_Direction_Receiver);
				}
				break;

			/* EV6 */
			case I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED:
				/* Send data */
				I2C_SendData(I2C1, I2C1_var.buffer[I2C1_var.index++]);
				break;
				
			case I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED:
				break;

			/* EV7 */
			case I2C_EVENT_MASTER_BYTE_RECEIVED:
				/* Store data received */
				I2C1_var.buffer[I2C1_var.index] = I2C_ReceiveData(I2C1);
				
				if(I2C1_var.length == 1)
				{
					I2C1_var.busy = 0;
					
					/* Disable acknowledgement */
					I2C_AcknowledgeConfig(I2C1, DISABLE);
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C1, ENABLE);
					I2C_ITConfig(I2C1, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				else if(I2C1_var.index == (I2C1_var.length - 1))
				{
					/* Disable acknowledgement */
					I2C_AcknowledgeConfig(I2C1, DISABLE);
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C1, ENABLE);
				}
				else if(I2C1_var.index == I2C1_var.length)
				{
					I2C1_var.busy = 0;
					
					I2C_ITConfig(I2C1, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				
				I2C1_var.index++;
				break;			

			/* EV8 */
			case I2C_EVENT_MASTER_BYTE_TRANSMITTING:
			case I2C_EVENT_MASTER_BYTE_TRANSMITTED:      
				if (I2C1_var.index == I2C1_var.length)
				{
					I2C1_var.busy = 0;
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C1, ENABLE);
					I2C_ITConfig(I2C1, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				else
				{
					/* Transmit data */
					I2C_SendData(I2C1, I2C1_var.buffer[I2C1_var.index++]); 
				}
				break;
			
			default:
				break;
		}
	}

	void I2C1_ER_IRQHandler(void)
	{
		/* Read SR1 register to get I2C error */
		if ((I2C_ReadRegister(I2C1, I2C_Register_SR1) & 0xFF00) != 0x00)
		{
			I2C1_var.busy = 0;
			
			/* Clears errors flags */
			I2C1->SR1 &= 0x00FF;
		}
	}

	void I2C2_EV_IRQHandler(void)
	{
		switch (I2C_GetLastEvent(I2C2))
		{
			/* EV5 */
			case I2C_EVENT_MASTER_MODE_SELECT:
				
				/* Enable acknowledgement */ 
				I2C_AcknowledgeConfig(I2C2, ENABLE);
				
				/* Send slave address for read or write */
				if(I2C2_var.readWrite == I2C_WRITE)
				{
					I2C_Send7bitAddress(I2C2, (uint8_t)I2C2_var.address, I2C_Direction_Transmitter);
				}
				else
				{
					I2C_Send7bitAddress(I2C2, (uint8_t)I2C2_var.address, I2C_Direction_Receiver);
				}
				break;

			/* EV6 */
			case I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED:
				/* Send data */
				I2C_SendData(I2C2, I2C2_var.buffer[I2C2_var.index++]);
				break;
				
			case I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED:
				break;

			/* EV7 */
			case I2C_EVENT_MASTER_BYTE_RECEIVED:
				/* Store data received */
				I2C2_var.buffer[I2C2_var.index] = I2C_ReceiveData(I2C2);
				
				if(I2C2_var.length == 1)
				{
					I2C2_var.busy = 0;
					
					/* Disable acknowledgement */
					I2C_AcknowledgeConfig(I2C2, DISABLE);
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C2, ENABLE);
					I2C_ITConfig(I2C2, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				else if(I2C2_var.index == (I2C2_var.length - 1))
				{
					/* Disable acknowledgement */
					I2C_AcknowledgeConfig(I2C2, DISABLE);
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C2, ENABLE);
				}
				else if(I2C2_var.index == I2C2_var.length)
				{
					I2C2_var.busy = 0;
					
					I2C_ITConfig(I2C2, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				
				I2C2_var.index++;
				break;			

			/* EV8 */
			case I2C_EVENT_MASTER_BYTE_TRANSMITTING:
			case I2C_EVENT_MASTER_BYTE_TRANSMITTED:      
				if (I2C2_var.index == I2C2_var.length)
				{
					I2C2_var.busy = 0;
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C2, ENABLE);
					I2C_ITConfig(I2C2, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				else
				{
					/* Transmit data */
					I2C_SendData(I2C2, I2C2_var.buffer[I2C2_var.index++]); 
				}
				break;
			
			default:
				break;
		}
	}

	void I2C2_ER_IRQHandler(void)
	{
		/* Read SR1 register to get I2C error */
		if ((I2C_ReadRegister(I2C2, I2C_Register_SR1) & 0xFF00) != 0x00)
		{
			I2C2_var.busy = 0;
			
			/* Clears errors flags */
			I2C2->SR1 &= 0x00FF;
		}
	}

	void I2C3_EV_IRQHandler(void)
	{
		switch (I2C_GetLastEvent(I2C3))
		{
			/* EV5 */
			case I2C_EVENT_MASTER_MODE_SELECT:
				
				/* Enable acknowledgement */ 
				I2C_AcknowledgeConfig(I2C3, ENABLE);
				
				/* Send slave address for read or write */
				if(I2C3_var.readWrite == I2C_WRITE)
				{
					I2C_Send7bitAddress(I2C3, (uint8_t)I2C3_var.address, I2C_Direction_Transmitter);
				}
				else
				{
					I2C_Send7bitAddress(I2C3, (uint8_t)I2C3_var.address, I2C_Direction_Receiver);
				}
				break;

			/* EV6 */
			case I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED:
				/* Send data */
				I2C_SendData(I2C3, I2C3_var.buffer[I2C3_var.index++]);
				break;
				
			case I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED:
				break;

			/* EV7 */
			case I2C_EVENT_MASTER_BYTE_RECEIVED:
				/* Store data received */
				I2C3_var.buffer[I2C3_var.index] = I2C_ReceiveData(I2C3);
				
				if(I2C3_var.length == 1)
				{
					I2C3_var.busy = 0;
					
					/* Disable acknowledgement */
					I2C_AcknowledgeConfig(I2C3, DISABLE);
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C3, ENABLE);
					I2C_ITConfig(I2C3, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				else if(I2C3_var.index == (I2C3_var.length - 1))
				{
					/* Disable acknowledgement */
					I2C_AcknowledgeConfig(I2C3, DISABLE);
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C3, ENABLE);
				}
				else if(I2C3_var.index == I2C3_var.length)
				{
					I2C3_var.busy = 0;
					
					I2C_ITConfig(I2C3, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				
				I2C3_var.index++;
				break;			

			/* EV8 */
			case I2C_EVENT_MASTER_BYTE_TRANSMITTING:
			case I2C_EVENT_MASTER_BYTE_TRANSMITTED:      
				if (I2C3_var.index == I2C3_var.length)
				{
					I2C3_var.busy = 0;
					
					/* Send STOP condition */
					I2C_GenerateSTOP(I2C3, ENABLE);
					I2C_ITConfig(I2C3, I2C_IT_EVT | I2C_IT_BUF, DISABLE);
				}
				else
				{
					/* Transmit data */
					I2C_SendData(I2C3, I2C3_var.buffer[I2C3_var.index++]); 
				}
				break;
			
			default:
				break;
		}
	}

	void I2C3_ER_IRQHandler(void)
	{
		/* Read SR1 register to get I2C error */
		if ((I2C_ReadRegister(I2C3, I2C_Register_SR1) & 0xFF00) != 0x00)
		{
			I2C3_var.busy = 0;
			
			/* Clears errors flags */
			I2C3->SR1 &= 0x00FF;
		}
	}
