==> mindThomas/STM32-libraries/Periphirals/STM32H7/I2C/I2C.cpp <==
#include "I2C.hpp"
#include <Priorities.h>
#include <math.h>
#include <string.h> // for memset
#include <Debug/Debug.h>
#define ERROR(msg) while(1) { __asm("bkpt #0"); }; // break on error and halt if debugging
#define DEBUG(msg)             // not implemented

uint8_t I2C::Read(uint8_t reg)
{
    uint8_t rx;
    if (Read(reg, &rx, 1))
        return rx;
    else
        return 0;
}

bool I2C::Read(uint8_t reg, uint8_t* buffer, uint8_t readLength)
{
    bool success = false;
    if (!_hRes)
        return success;
#ifdef USE_FREERTOS
    xSemaphoreTake(_hRes->resourceSemaphore, (TickType_t)portMAX_DELAY); // take hardware resource

    if (uxSemaphoreGetCount(
          _hRes->transmissionFinished)) // semaphore is available to be taken - which it should not be at this state
                                        // before starting the transmission, since we use the semaphore for flagging the
                                        // finish transmission event
        xSemaphoreTake(_hRes->transmissionFinished,
                       (TickType_t)portMAX_DELAY); // something incorrect happened, as the transmissionFinished
                                                   // semaphore should always be taken before a transmission starts
#else
    _hRes->transmissionFinished = false;
#endif

    /*uint8_t * txBuffer = (uint8_t *)pvPortMalloc(readLength+1);
    uint8_t * rxBuffer = (uint8_t *)pvPortMalloc(readLength+1);

    if (!txBuffer || !rxBuffer) return;

    memset(txBuffer, 0, readLength+1);
    txBuffer[0] = reg;*/

    if (HAL_I2C_Mem_Read_IT(&_hRes->handle, (uint16_t)_devAddr, reg, I2C_MEMADD_SIZE_8BIT, buffer, readLength) ==
        HAL_OK) {
        // Wait for the transmission to finish
#ifdef USE_FREERTOS
        xSemaphoreTake(_hRes->transmissionFinished, (TickType_t)portMAX_DELAY);
#else
        while (!_hRes->transmissionFinished)
            ;
#endif
        success = true;
    } else {
        DEBUG("Failed I2C transmission");
    }

    // uint32_t errCode = HAL_I2C_GetError(&_hRes->handle);

    /*memcpy(buffer, &rxBuffer[1], readLength);

    vPortFree(txBuffer);
    vPortFree(rxBuffer);*/

#ifdef USE_FREERTOS
    xSemaphoreGive(_hRes->resourceSemaphore); // give hardware resource back
#endif
    return success;
}

void I2C1_EV_IRQHandler(void)
{
    if (I2C::resI2C1)
        HAL_I2C_EV_IRQHandler(&I2C::resI2C1->handle);
}

void I2C1_ER_IRQHandler(void)
{
    if (I2C::resI2C1)
        HAL_I2C_ER_IRQHandler(&I2C::resI2C1->handle);
}

void I2C2_EV_IRQHandler(void)
{
    if (I2C::resI2C2)
        HAL_I2C_EV_IRQHandler(&I2C::resI2C2->handle);
}

void I2C2_ER_IRQHandler(void)
{
    if (I2C::resI2C2)
        HAL_I2C_ER_IRQHandler(&I2C::resI2C2->handle);
}

void I2C3_EV_IRQHandler(void)
{
    if (I2C::resI2C3)
        HAL_I2C_EV_IRQHandler(&I2C::resI2C3->handle);
}

void I2C3_ER_IRQHandler(void)
{
    if (I2C::resI2C3)
        HAL_I2C_ER_IRQHandler(&I2C::resI2C3->handle);
}
